--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,9 +10,9 @@
     "idf.espIdfPathWin": "C:\\Users\\andre\\esp\\v5.2.1\\esp-idf",
     "idf.openOcdConfigs": [
         "interface/ftdi/esp32_devkitj_v1.cfg",
-        "target/esp32.cfg"
+        "target/esp32s3.cfg"
     ],
-    "idf.portWin": "COM4",
+    "idf.portWin": "COM6",
     "idf.pythonBinPathWin": "C:\\Users\\andre\\.espressif\\python_env\\idf5.2_py3.11_env\\Scripts\\python.exe",
     "idf.toolsPathWin": "C:\\Users\\andre\\.espressif",
     "files.associations": {
@@ -25,7 +25,10 @@
         "wavfilereader.h": "c",
         "task.h": "c",
         "freertos.h": "c",
-        "esp_pthread.h": "c"
+        "esp_pthread.h": "c",
+        "format": "c"
     },
-    "idf.flashType": "UART"
+    "idf.flashType": "UART",
+    "idf.monitorBaudRate": "115200",
+    "idf.flashBaudRate": "921600",
 }
